--- a/project/example/templates/example/home.html
+++ b/project/example/templates/example/home.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 
+{% block head_supplement %}
+<link href='http://fonts.googleapis.com/css?family=Signika+Negative:300,400,600,700' rel='stylesheet' type='text/css'>
+<style>
+body { font-family: 'Signika Negative', sans-serif; font-size: 14px; background-color: #eef2f3; }
+body, a, a:hover, a:checked, a:visited, a:link { color: #1c2021; }
+#container { width: 780px; margin:100px auto; text-align: center; }
+</style>
+{% endblock %}
+
 {% block content %}
-	<h1><a href="/">{{ _('Hello world') }}</a></h1>
-	<p>We build <strong>awesome</strong> butfriendly stuff.</p>
+	<h1>We build awesome <strong>ButFriendly</strong> stuff.</h1>
 {% endblock %}
