--- a/project/example/templates/example/home.html
+++ b/project/example/templates/example/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "example_base.html" %}
 
 {% block head_supplement %}
 <link href='http://fonts.googleapis.com/css?family=Signika+Negative:300,400,600,700' rel='stylesheet' type='text/css'>
