Change title at example homepage

--- a/project/example/templates/example/home.html
+++ b/project/example/templates/example/home.html
@@ -5,5 +5,6 @@
 {% endblock %}
 
 {% block content %}
-	<h1>We build awesome <strong>ButFriendly</strong> stuff.</h1>
+	<h1>Welcome to ButFriendly's Django Project</h1>
+	<p>Congratulations, you successfully setup ButFriendly's Django project-template. But it wasn't that complicated, wasn't it?</p>
 {% endblock %}
